# seine

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  FEATURES.md  Makefile  NOTICE  README.md  drools-rust-port-brief.md
.github/workflows/: ci.yml
bindings/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/python/seine/: __init__.py  _rows.py  authoring.py
bindings/python/seine_rs/: __init__.py  _rows.py  authoring.py  derive.py
bindings/src/: derive.rs  expr.rs  lib.rs
bindings/tests/: test_arc3.py  test_authoring.py  test_boundary.py  test_datatypes.py  test_derive.py  test_derive_expr.py  test_derive_expr_adsb.py  test_quickstart.py  test_rows.py  test_surface.py  test_why.py
demo/: adsb_convergence.py  eight_puzzle.py  eight_puzzle_wheel.py  stream_driver.py
demo/tours/: README.md  probe_d370_arity.py  probe_d370_grid.py  tour10_tms_edges.py  tour11_salience_strings.py  tour12_agenda.py  tour13_collect.py  tour14_window_churn.py  tour1_tms.py  tour2_cep.py  tour3_provenance.py  tour4_query.py  tour5_lifecycle.py  tour6_decimal.py  tour7_neg_exists_or.py  tour8_allen.py  tour9_cascade.py
docs/: HANDOFF-derive.md  allen-beyond-drools.md  baseline-extraction.md  derivation-plane.md  derive-expr-pins.md  design-datatypes.md  drools-bug-acc-requeue-deafness.md  drools-bug-stale-minmax.md  drools-inferred-expiry-never.md  drools-test-routing.tsv  drools-test-skiplist.md  duckdb-datatype-pins.md  memo-cep-as-tms.md  not-temporal-port-mechanism.md  roadmap-acceptance.md  tj-tail-update-recency-mechanism.md  tjupd-ledger-mechanisms.md  xfail-triage.md
engine/: Cargo.toml
engine/src/: drl.rs  engine.rs  lib.rs  phreak.rs  queries.rs  rx.rs  store.rs
engine/tests/: acc_provenance.rs  bd_arith_walls.rs  d097_nulls.rs  d098_decimals.rs  d103_errors.rs  dec_avg.rs  p0_walking_skeleton.rs  q2_walls.rs  tms_queryable.rs  tms_why_adversarial.rs
harness/: Cargo.toml
harness/src/: alloc_stats.rs  canon.rs  gen.rs  main.rs  oracle.rs  runner.rs  ser.rs
oracle/: pom.xml
probes_pending/: acc_lu_range.json  alu4.json  alu6b.json  alu6c.json  alu6d.json  alu6e.json  alu7b.json  alu7i.json  j01_join_order.json  j02_cross_var_cmp.json  j03_update_refire.json
probes_pending/agenda_focus/: HANDOFF.md  PINS.md  g10_twinsame.json  g11_twinmain.json  g12_barenot.json  g13_alphaH.json  g14_base.json  g14_ctl.json  g14_relink.json  g15_twonots.json  g16_latejoin.json  g17_prelink.json  g18_existsbeta.json  g19_joinlinked.json  g1_n2.json  g1_n4.json  g1_n5.json  g20_twopush.json  g2_prepush.json  g3_unblocked.json  g4_twohighs.json  g5_exists.json  g6_beta.json  g6_beta_n5.json  g6_betaneq.json  g6_grpjoin.json  g6_grpjoin_n5.json  g7_tie_hfirst.json  g7_tie_hlast.json  g8_mixed.json  g9_twogroups.json
probes_pending/agenda_late_continue/: HANDOFF.md  late-continue.patch
probes_pending/agenda_open/: ag_h1_static_higher.json  ag_h2_dyn_higher.json  ag_h3_prior_firing_born.json  fz_9001_7397.json  fz_9003_6467.json  fz_9003_879.json  fz_9004_214.json  fz_9005_873.json  fz_9101_7133.json  fz_9102_7658.json  fz_9103_1436.json  fz_9104_1328.json  fz_9104_5192.json  fz_9105_5736.json  fz_9105_8945.json  fz_9202_2058.json  fz_9202_77.json  fz_9203_5530.json
probes_pending/agg/: ga10_groupby_downstream.json  ga11_list_strings.json  ga12_groupby_emptykey.json  ga13_set_order_neg.json  ga14_set_strings.json  ga15_set_dup_delete.json  ga16_list_dup_delete.json  ga1_collectlist.json  ga2_collectset.json  ga3_groupby.json  ga4_acc_per_key.json  ga5_collectlist_order.json  ga6_set_order.json  ga7_list_lifecycle.json  ga8_groupby_rekey.json  ga9_groupby_empty.json
probes_pending/arith_grammar/: HANDOFF.md  PINS.md  ar_ctx_acc.json  ar_ctx_group.json  ar_ctx_not_exists.json  ar_ctx_not_zero.json  ar_ctx_query.json  ar_dz_bind_cmp.json  ar_dz_bind_div.json  ar_dz_field_cmp.json  ar_dz_field_cmp30.json  ar_dz_field_ops.json  ar_dz_in_dbl.json  ar_dz_in_int.json  ar_dz_jit_eq3.json  ar_dz_jit_eq35.json  ar_dz_jit_gt3f.json  ar_dz_jit_zero.json  ar_dz_lit_ops.json  ar_dz_mod_prec.json  ar_dz_mod_zero.json  ar_dz_prec.json  ar_dz_pred_bind_rel.json  ar_dz_pred_nan_rel.json  ar_dz_pred_narrow.json  ar_dz_pred_ne.json  ar_dz_race_eq35.json  ar_dz_race_zero.json  ar_dz_zero_bind.json  ar_dz_zero_lit.json  ar_dz_zero_lit_eq.json  ar_dz_zero_nan.json  ar_dz_zero_neg.json  ar_dz_zero_ops.json  ar_fl_runaway_computed.json  ar_lhs_bind_bind.json  ar_lhs_bind_mul.json  ar_lhs_binding_arith.json  ar_lhs_cross_type_eq.json  ar_lhs_div_ctx.json  (+42 more)
probes_pending/bigdec_arith/: PINS.md  bd2_div_dbl_field.json  (+34 more)
reserved/seine/: Cargo.toml  README.md
reserved/seine/src/: lib.rs
scenarios/: xfail-engine-baseline.ndjson
seine_book/: 01-facts.md  02-rules.md  03-agenda.md  04-truth-maintenance.md  05-time-and-events.md  06-temporal-patterns.md  07-math-outside-the-engine.md  README.md
tools/: baseline_gate.py  bean_catalog.json  bench_oom.sh  bench_oracle.py  bench_wheel.py  cep_join_battery.py  diff_duckdb.py  extract_baseline.py  facts_check.py  fuzz_cep.py  fuzz_chain.py  fuzz_duckdb.py  fuzz_exists_infer.py  fuzz_exists_temporal.py  fuzz_existsorder.py  fuzz_not_temporal.py  fuzz_notorder.py  fuzz_notorder_b.py  fuzz_pos_reaper.py  fuzz_shared_tjo.py  fuzz_tms_ird.py  fuzz_tms_sd.py  fuzz_winacc.py  gen_bean_catalog.py  gen_qp.py  gen_winacc_probes.py  lint_book.py  lint_probes.py  minimize.py  minimize_keyed.py  model_check_accdefer.py  model_check_chain.py  model_check_exists.py  model_check_exists_churn.py  model_check_focuspop.py  model_check_join.py  model_check_join2.py  model_check_join3.py  model_check_notlead.py  model_check_notorder.py  (+21 more)
xfail/: README.md  fz_123_2455.json  fz_123_5655.json  fz_123_8168.json  fz_42_3408.json  fz_42_3554.json  fz_42_4373.json  fz_42_7330.json  fz_42_8472.json  fz_42_9531.json  fz_777_7592.json  fz_7_1130.json  fz_7_6865.json  fz_7_9285.json  minimize.py
(+3073 files in other folders)
