[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name (the "seine" name is taken). The import
# package matches: `pip install seine-rs` -> `import seine_rs`.
name = "seine-rs"
version = "0.4.19"
description = "Differentially certified Drools-subset rule engine over Arrow dataframes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Bryan McGuire", email = "bryan@silverlakeagentics.com" }]
keywords = ["rules-engine", "drools", "rete", "phreak", "arrow", "polars", "dataframe"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]

# The wheel itself is dependency-free; these are the optional interop
# exits (to_pylist() needs neither).
[project.optional-dependencies]
arrow = ["pyarrow"]
polars = ["polars"]

[project.urls]
Repository = "https://github.com/sl-agentics/seine"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "seine_rs._native"
python-source = "python"
features = ["pyo3/extension-module"]
