[package]
name = "seine-harness"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Differential test harness: runs scenarios through seine-engine and the Drools oracle, compares canonical results"

[dependencies]
seine-engine = { path = "../engine" }
serde = "1"
serde_json = { version = "1", features = ["float_roundtrip"] }
