[package]
name = "seine-harness"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Differential test harness: runs scenarios through seine-engine and the Drools oracle, compares canonical results"

[dependencies]
seine-engine = { path = "../engine" }
pprof = { version = "0.13", features = ["flamegraph"], optional = true }
serde = "1"
serde_json = { version = "1", features = ["float_roundtrip"] }

[features]
# D-267 follow-up: signal-based profiling (perf_event is sysctl-blocked here)
prof = ["dep:pprof"]
# Memory-diet step 0 (D-270): counting global allocator, histogram on stderr
alloc_stats = []
